<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_parent_home_screen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="68dp"
    tools:context="in.ashutoshchaubey.studybuddy.MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/views_margin_padding_xxxl"
        android:layout_marginEnd="@dimen/views_margin_padding_m"
        android:layout_marginStart="@dimen/views_margin_padding_m"
        android:layout_marginTop="@dimen/views_margin_padding_xl"
        android:background="#ffd1d1"
        android:orientation="vertical">

        <EditText
            android:id="@+id/saved_note"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/views_margin_padding_m"
            android:background="@android:color/transparent"
            android:focusable="false"
            android:hint="@string/note_hint" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/views_margin_padding_m"
            android:scaleType="centerCrop" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_margin="@dimen/views_margin_padding_m"
        android:gravity="center"
        android:orientation="horizontal">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/default_alarm"
            android:textColor="#000000" />

        <Switch
            android:id="@+id/alarm_switch"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"/>


    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_settings_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="68dp"
        android:layout_marginEnd="@dimen/views_margin_padding_m"
        android:layout_marginTop="@dimen/views_margin_padding_m"
        android:padding="@dimen/views_margin_padding_m"
        android:src="@drawable/settings_menu"
        app:backgroundTint="#FF5722"
        android:elevation="0dp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/fab_settings_menu"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="@dimen/views_margin_padding_m"
        android:gravity="end"
        android:orientation="vertical">
        <!--android:visibility="gone"-->
        <!--&gt;-->

        <LinearLayout
            android:id="@+id/phone_settings_parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:visibility="gone">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:text="@string/phone_settings"
                android:textColor="#000000" />

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/fab_settings_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/settings_mobile"
                android:elevation="0dp"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/launcher_settings_parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:visibility="gone">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:text="@string/launcher_settings"
                android:textColor="#000000" />

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/fab_settings_launcher"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/settings_launcher"
                android:elevation="0dp"/>

        </LinearLayout>

    </LinearLayout>
</RelativeLayout>